2002-01-24  Alexander Shopov  <al_shopov@web.bg>

	* configure.in (ALL_LINGUAS): added "bg"

2002-01-23  Alex Larsson  <alexl@redhat.com>

	* src/yelp-scrollkeeper.[ch]:
	Implement seriesid lookup.

	* src/yelp-view-toc.c:
	Fix the startpage to contain the seriesid docs, and
	be more dynamic.

2002-01-23  Alex Larsson  <alexl@redhat.com>

	* src/yelp-util.c:
	Change path separator to '/'.

	* src/yelp-view-toc.c:
	Implement simple toc:info URL handler.

2002-01-23  Alex Larsson  <alexl@redhat.com>

	* src/yelp-util.c:
	Clean up section->name usage
	
	* src/yelp-view-toc.c:
	Clean up and fix double free in yelp_view_toc_full_path_name()

2002-01-22  Alex Larsson  <alexl@redhat.com>

	* src/yelp-man.c (yelp_man_push_initial_tree):
	Fix silly bug.

	* src/yelp-util.[ch]:
	Add functions to go between Nodes in the doc tree and
	string paths.

	* src/yelp-view-toc.c:
	Update man handling to GNodes.

2002-01-23  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-window.c (yw_history_button_clicked): 
	- use string instead of YelpSection with history.

	* src/yelp-history.[ch]: work with strings instead of
	  YelpSection. 

2002-01-22  Hasbullah Bin Pit <sebol@ikhlas.com>

	* configure.in: Added ms to ALL_LINGUAS.
	* po/ms.po: Added Malay Translation by
          Mohamad Afifi Omar <mr_mohd_afifi@yahoo.com> and me.

2002-01-22  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-view-toc.c: started to rewrite to use GNode-tree
	  instead of GtkTreeStore.

	* src/yelp-base.c: use a GNode-tree instead of the GtkTreeStore.

	* src/yelp-window.c: dito.

	* src/yelp-scrollkeeper.[ch]: dito.

	* src/yelp-man.[ch]: dito.

	* src/yelp-info.[ch]: dito.

	* src/yelp-window.c: use stock items for menu.

2002-01-21  Alex Larsson  <alexl@redhat.com>

        * src/yelp-marshal.list:
	Add a boolean the the marshaller needed for url_selected

	* src/yelp-section.h:
	Fix typo in #endif
	
        * src/yelp-html.[ch]:
	Change section_selected to url_selected
	