@@ -1,3 +1,8 @@
+2002-01-24  Alex Larsson  <alexl@redhat.com>
+
+	* src/yelp-view-toc.c:
+	Add initial scrollkeeper support.
+
 2002-01-24  Alexander Shopov  <al_shopov@web.bg>
 
 	* configure.in (ALL_LINGUAS): added "bg"
